# mclass

./: .gitignore  LICENSE  README.md  pyproject.toml
src/keywordify/: __init__.py  __main__.py  wordify.py
src/media_classifier/: __main__.py  regex_trio.py  wordify.py
